# petabunit

./: .gitignore  .zenodo.json  README.md  README.rst  RELEASE.md  TODO.md  fcode.sh  setup.cfg  tox.ini
.github/workflows/: main.yml
examples/: statistics.tsv
examples/baymodts_caffeine/: Caffeine_Control_measurement_table.tsv  caffeine_pk_Control.yaml  observables_caffeine_pk.tsv  parameter_caffeine_pk.tsv
examples/enalapril_pbpk/: enalapril_pbpk.xml
examples/simple_chain/: conditions2_simple_chain.tsv  conditions_simple_chain.tsv  measurementData_simple_chain.tsv  measurements_simple_chain.tsv  observables_simple_chain.tsv  parameters_simple_chain.tsv  simple_chain.md  simple_chain.py  simple_chain.xml  simple_chain.yaml  simple_chain_optimization.py  simple_chain_petab.py
examples/simple_pk/: conditions_simple_pk.tsv  measurements_simple_pk.tsv  parameters_simple_pk.tsv  simple_pk.xml  simple_pk.yaml  simple_pk_optimization.py  simple_pk_petab.py
examples/simple_pk_multiple/: conditions_multi_pk.tsv  measurements_multi_pk.tsv  multi_pk.yaml  multi_pk_optimization.py  multi_pk_petab.py  observables_multi_pk.tsv  simple_pk.xml  simple_pk_multi_petab.py
release-notes/: 0.0.1.md  0.0.2.md
src/petabunit/: __init__.py  converter.py  example.py  examples.py  log.py  petabunits.py  sbmlunits.py  units.py
src/petabunit/analysis/: benchmark_problems.py
tests/: test_example.py
