[bumpversion]
current_version = 0.0.2
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize =
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = petabunit
url = https://github.com/matthiaskoenig/petabunit
download_url = https://pypi.org/project/petabunit
project_urls =
	Source Code = https://github.com/matthiaskoenig/petabunit
	Documentation = https://github.com/matthiaskoenig/petabunit
	Bug Tracker = https://github.com/matthiaskoenig/petabunit/issues
author = Matthias König
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-3.0
description = petabunit are python utilities for working with units with PEtab.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	units
	parameter optimization
	annotation

[options]
zip_safe = True
python_requires = >=3.10
install_requires =
	rich>=13.7
	petab>=0.4.1
    sbmlutils>=0.8.7
    pypesto>=0.5.2
    pypesto[fides]
    amici>=0.26.1
tests_require =
	tox>=4.14.2
	pytest>=8.1.1
packages = find:
package_dir =
	= src
include_package_data = True

[options.package_data]
petabunit = py.typed

[aliases]
test = pytest

[options.packages.find]
where = src

[options.extras_require]
development =
	pip-tools>=7.4.1
	black>=24.3.0
	bump2version>=1.0.1
	isort>=5.13.2
	tox>=4.12.2
	flake8>=7.0.0
	flake8-mypy>=17.8.0
	mypy>=1.9.0
	pytest>=8.1.1
	pytest-cov>=5.0.0

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values =
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/petabunit/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
